# fastapi-aws-terraform

./: README.md
talk-booking-master/: .gitlab-ci.yml
talk-booking-master/ci_cd/python/: Dockerfile
talk-booking-master/infrastructure/global/vpc/: ci-cd.yml  main.tf  variables.tf
talk-booking-master/infrastructure/modules/talk-booking-service/: ecs.tf  ecs_service.tf  load_balancer.tf
talk-booking-master/infrastructure/talk-booking-service/development/: main.tf  variables.tf
talk-booking-master/services/talk_booking/: .coveragerc  .flake8  ci-cd.yml  pyproject.toml
