[tool.poetry]
name = "talk_booking"
version = "0.1.0"
description = ""
authors = ["Chris Gillispie <chris@whiteriverskynet.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
